--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,15 +13,12 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
-dependencies = ["pyserial >= 3.5",]
+dependencies = ["pyserial",]
 
 
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
-
-[project.scripts]
-jrt-green-laser = "jrt-green-laser.__main__:main"
 
 [project.urls]
 "Homepage" = "https://github.com/MAUI65/jrt-green-laser"
